# find-audio

./: LICENSE  Makefile  README.md  pyproject.toml  yt-dlp.conf
find_audio/: main.py  stt.py
